--- a/app/src/main/res/drawable/bg_menu.xml
+++ b/app/src/main/res/drawable/bg_menu.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="36dp" />
-    <solid android:color="#66000000" />
-    <gradient android:startColor="#33000000" android:centerColor="#88000000" android:endColor="#aa000000" android:type="linear"/>
+    <corners
+        android:bottomLeftRadius="64dp"
+        android:bottomRightRadius="12dp"
+        android:topLeftRadius="64dp"
+        android:topRightRadius="12dp" />
+    <gradient
+        android:centerColor="#bb000000"
+        android:endColor="#aa000000"
+        android:startColor="#88000000"
+        android:type="linear" />
 </shape>
